# Learn_Agent_SDK

./: .env
Class-01 Agent SDK/test/hello_chainlit/src/hello_chainlit/: chatbot.py
Class-02 Chatbot with Agents SDK/: hello.py  main.py  pyproject.toml
Class-02 Chatbot with Agents SDK/chain_hello/: hello.py  main.py  pyproject.toml
Class-03 Diving in source code OpenAI Agents SDK/: python-syntax-dataclasses.ipynb
Class-04 Dataclass, Generics and Callable/: Callables.ipynb  Generics_And_Dataclasses.ipynb  python_dataclasses_example.ipynb
Class_01/hello_chainlit/: pyproject.toml
Class_01/hello_chainlit/src/: chatbot.py
Class_01/test/: pyproject.toml
Class_01/test/hello_chainlit/src/hello_chainlit/: chatbot.py
hello/: pyproject.toml
hello/src/hello/: __init__.py
